[package]
name = "windirs"
description = "A safe wrapper around `SHGetKnownFolderPath`."
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/windirs"

[dependencies.winapi]
version = "0.3"
features = ["knownfolders", "objbase", "shlobj", "winbase", "winerror"]
